OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Recipient_Group__c/Vendor_Program_Recipient_Group__c.object-meta.xml
<CustomObject>
    <description>Represents the versioned association between a Vendor Program and a Recipient Group. Each record defines a specific configuration of a Recipient Group applied to a Vendor Program, with support for versioning, status tracking (e.g., Draft, Active), and validation to ensure proper activation dependencies.</description>
    <label>Vendor Program Recipient Group</label>
    <nameField>
        <displayFormat>VPGR-{00000}</displayFormat>
        <label>Vendor Program Recipient Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Program Recipient Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>