OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Recipient_Group__c/fields/Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>Filter_Logic__c</fullName>
    <label>Filter Logic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>