OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Recipient_Group__c/fields/Parent_Version__c.field-meta.xml
<CustomField>
    <fullName>Parent_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links all versions back to the &quot;original&quot; version (or root parent)</description>
    <label>Related Group Version</label>
    <referenceTo>Vendor_Program_Recipient_Group__c</referenceTo>
    <relationshipLabel>Vendor Program Recipient Groups</relationshipLabel>
    <relationshipName>Vendor_Program_Recipient_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>