OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Recipient_Group__c/fields/Recipient_Group__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Group of recipients (dynamic/static)</description>
    <label>Recipient Group</label>
    <referenceTo>Recipient_Group__c</referenceTo>
    <relationshipLabel>Vendor Program Recipient Groups</relationshipLabel>
    <relationshipName>Vendor_Program_Recipient_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>