OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Recipient_Group__c/fields/Vendor_Program__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Vendor Program this applies to</description>
    <label>Vendor Program</label>
    <referenceTo>Vendor_Customization__c</referenceTo>
    <relationshipLabel>Vendor Program Recipient Groups</relationshipLabel>
    <relationshipName>Vendor_Program_Recipient_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>